snapshots/syntax/library/statements/mkdir/mkdir_at_module_level.snap
---
source: src/syntax/library/statements/mkdir.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: MkDirStatement
      children:
        - kind: MkDirKeyword
          text: MkDir
        - kind: Whitespace
          text: " "
        - kind: StringLiteral
          text: "\"C:\\Temp\""
