snapshots/syntax/library/statements/mkdir/mkdir_preserves_whitespace.snap
---
source: src/syntax/library/statements/mkdir.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Whitespace
      text: "    "
    - kind: MkDirStatement
      children:
        - kind: MkDirKeyword
          text: MkDir
        - kind: Whitespace
          text: "    "
        - kind: StringLiteral
          text: "\"MyFolder\""
        - kind: Whitespace
          text: "    "
        - kind: Newline
          text: "\n"
